style.css
*{
    margin: 0;
    box-sizing: border-box;
}

body {
    font-size: 0;
}

.container {
    width: 100vw;
    height: 100vh;
    border: 1px black solid;
    position: absolute;
}

.gameTitle {
    font-size: 55px;
    text-align: center;
    color: beige;
    font-family: 'Diplomata SC', cursive;
}

.rulesTitle {
    position: relative;
    top: 1%;
    margin: 0% 0% 7% 0%;
    color: beige;
    font-family: 'Diplomata SC', cursive;
    text-align: center;
    font-size: xx-large;
}

.gameHeader {
    width: 100%;
    height: 15%;
    border: 1px solid black;
    background: linear-gradient(black, saddlebrown);
}

.boardContainer{
    width: 100%;
    height: 85%;
    border: 1px solid black;
    display: inline-block;
}

.statsArea {
    width: 20%;
    height: 100%;
    border: 1px solid black;
    border-top: none;
    display: inline-block;
    vertical-align: top;
    font-size: 1rem;
    position: relative;
    background: linear-gradient(saddlebrown, black);
}

button {
    display: inline-block;
    width: 45%;
    height: 8%;
    margin: 5% 0% 5% 3%;
    background: radial-gradient(grey, beige);
    font-size: small;
    box-shadow: 0 5px 13px 10px rgba(0,0,0,5), 3px 10px 15px 10px rgba(0,0,0,10);
    border-radius: 6px;
    font-family: 'Diplomata SC', cursive;
}

.rulesText {
    font-family: 'Diplomata SC', cursive;
    color: beige;
    font-size: 11px;
    text-align: center;
}


.scoreTitle {
    position: relative;
    text-align: center;
    padding-top: 1%;
    font-size: xx-large;
    color: beige;
    font-family: 'Diplomata SC', cursive;
}

.player1Score, .player2Score {
    position: relative;
    left: 15.5%;
    top: 1%;
    margin: 0% 0% 6% 0%;
    font-size: x-large;
    color: beige;
    font-family: 'Diplomata SC', cursive;
}

.player1Score {
    color: indianred;
}

.player2Score {
    color: darkgray;
}

.playArea {
    width: 79%;
    height: 100%;
    border: 2px black solid;
    border-top: none;
    display: inline-block;
    position: relative;
    background: linear-gradient(saddlebrown, black);
    background-image: url("Images/western.jpg");
    background-image: contain;
    background-repeat: no-repeat;
   
}

.gameBoarder {
    width: 45%;
    height: 90%;
    position: relative;
    display: flex;
    justify-content: center;
    left: 47%;
    top:50%;
    transform: translate( -50%, -50%);
}

#gameArea{
    width: 100%;
    height: 100%;
    position: relative;
    left: 50%;
    top: 50%;
    transform:translate(-50%,-50%);
    padding-top: 16%;
    padding-right: 1%;
    border-radius: 20px;
    box-shadow: 0 10px 18px 15px rgba(0,0,0,5), 10px 12px 22px 10px rgba(0,0,0,10);
    background-image: url("Images/gradingwood.jpeg");
    background-size: cover;
    background-repeat: no-repeat;

}

.row {
    display: flex;
    justify-content: center;
}

.square {
    display: inline-block;
    width: 63px;
    height: 63px;
    border: 1px solid black;
    border-radius: 2px;
}

.light {
    background: radial-gradient(beige, whitesmoke);
}


.dark {
    background: radial-gradient(grey, black);
}

.checker {
    width: 30px;
    height: 30px;
    background: radial-gradient(darkred, red, indianred);
    border-radius: 20px;
    margin-top: 30%;
    margin-left: 30%;
    position: relative;
}


.player1{
    background: radial-gradient(lightgrey, darkgray, whitesmoke);
}

.highLight {
    border: 2px yellow solid;

}
.king{
    background-color: gold;
}

